dependency updates, jdk13+ compatibility, clean-ups